--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <a class="footer-link" href="https://github.com/siddhant2132002">Github</a>
     <a class="footer-link" href="https://www.instagram.com/siddhantsaxena_sid/">Instagram</a>
     <p class="copyright">© 2021 siddhant saxena @wakeupprogrammer.</p>
+    <a href="https://siddhant2132002.github.io/day-7-in-web-devlopment-project-1-progress/">@wakeupprogrammer</a>
 
 </div>
   </body>
